fix API call and disable wrapping in workspace

--- a/client/style.styl
+++ b/client/style.styl
@@ -525,7 +525,6 @@ button()
     flex-direction column
   @media screen and (orientation:landscape)
     flex-direction row
-  flex-wrap wrap
   overflow auto
   & > *
     flex-shrink 0
